package spg.datamodel

/**
 * Created by unggi on 11/2/14.
 */
class SalesPerson {

}
